--- a/package.json
+++ b/package.json
@@ -42,8 +42,12 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
     "next": "15.4.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.61.1",
+    "react-resizable-panels": "^3.0.4",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.1",
